@@ -135,6 +135,9 @@ If you are using a version of Perl older than 5.8.1, you should consider
 installing a newer version of CGI::Carp (must be at least 1.24, included in
 CGI.pm-2.82). Otherwise any error messages generated by the CGI script
 will not show up quite as clean as they could in the web server error log.
+If you can't or don't want to upgrade CGI::Carp, you can also set
+the C<changecgiprogramname> variable in the C<General> section to the
+value C<no>.
 
 =back
 
